--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,2 @@
-# Core AI/ML libraries
-openai>=1.3.0
-anthropic>=0.7.0
-requests>=2.31.0
-numpy>=1.24.0
-pandas>=2.0.0
-
-# Utility libraries
-python-dotenv>=1.0.0
-click>=8.1.0
-rich>=13.0.0
-pydantic>=2.0.0
-
-# Development tools
-black>=23.0.0
-flake8>=6.0.0
-pytest>=7.0.0 
+# Root requirements.txt
+# Install per-project dependencies from their respective requirements.txt files.
