Add .gitignore and enhance app.py with model downloading and image loading features
- Created a .gitignore file to exclude model and image directories.
- Added functionality in app.py to download the ClipCap model if it doesn't exist and to load images from local paths or URLs.
- Updated command-line argument parsing to allow specifying the model path and image input.
- Adjusted dependencies in pyproject.toml to point to the correct GitHub repository for clipcap.

--- a/scripts/clipcap/pyproject.toml
+++ b/scripts/clipcap/pyproject.toml
@@ -7,6 +7,6 @@ dependencies = [
     "requests",
     "pillow",
     "transformers",
-    "clipcap",
+    "clipcap @ git+https://github.com/michelecafagna26/CLIPCap.git",
     "clip @ git+https://github.com/openai/CLIP.git",
 ] 
