Refactor project structure and add core functionality for task management
- Introduced a monorepo structure with separate packages for core business logic, utilities, and applications (CLI and web).
- Implemented core services for user and task management, including creation, retrieval, updating, and listing functionalities.
- Added CLI tool for task management with user and task commands.
- Developed a web application using FastAPI for task management with a user-friendly interface.
- Created a comprehensive README for project setup and usage instructions.
- Added tests for core functionalities to ensure reliability.
- Updated dependencies in pyproject.toml and requirements.txt for better package management.
- Removed obsolete ClipCap script and related files.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-# Root requirements.txt
-# Install per-project dependencies from their respective requirements.txt files.
+# Common dependencies for all packages
+click>=8.0.0      # CLI framework
+requests>=2.28.0  # HTTP library
+pydantic>=2.0.0   # Data validation
+loguru>=0.7.0     # Logging 
