--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-# Common dependencies for all packages
-click>=8.0.0      # CLI framework
-requests>=2.28.0  # HTTP library
-pydantic>=2.0.0   # Data validation
-loguru>=0.7.0     # Logging 
+torch
+transformers==4.44.0
+pillow
+einops
+open_clip_torch
+timm
+
