--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.12.2
     hooks:
-    -   id: ruff-check
+    -   id: ruff
         args: [ --fix ]
     -   id: ruff-format
 -   repo: https://github.com/PyCQA/isort
