Enhance Docker Compose setup for Qdrant with CPU and GPU support
- Renamed Qdrant service to 'qdrant-cpu' and added a new 'qdrant-gpu' service.
- Updated ports and environment variables for both CPU and GPU versions.
- Modified README to include instructions for starting services with profiles for CPU and GPU.
- Adjusted requirements.txt for clarity on installing PyTorch for newer Nvidia GPUs.

--- a/colnomic_qdrant_rag/requirements.txt
+++ b/colnomic_qdrant_rag/requirements.txt
@@ -1,5 +1,5 @@
 # ColPali and related models
-torch # For newer Nvidia GPUs (e.g. RTX 5090) use --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128
+torch # For newer Nvidia GPUs (e.g. RTX 5090) use uv pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128
 colpali_engine
 transformers
 
