Refactor audio processing terminology and update README for clarity
- Changed references from "YouTube" to "video" throughout the codebase and documentation to generalize the audio processing capabilities.
- Updated method names and comments in app.py and main.py for consistency with the new terminology.
- Revised README.md to reflect changes in functionality and improve user instructions for processing videos.

--- a/colqwen_omni/requirements.txt
+++ b/colqwen_omni/requirements.txt
@@ -21,10 +21,10 @@ fsspec==2023.9.2
 # OpenAI API
 openai
 
-# ColPali model (from GitHub)
+# ColPali model
 git+https://github.com/illuin-tech/colpali
 
-# YouTube downloader (from GitHub)
+# yt-dlp
 git+https://github.com/yt-dlp/yt-dlp
 
 # Additional dependencies that might be needed
