--- a/colqwen_fastapi/requirements.txt
+++ b/colqwen_fastapi/requirements.txt
@@ -1,5 +1,4 @@
-torch
-torchvision
+# torch and torchvision are installed in Dockerfile.gpu with the matching CUDA build
 transformers
 git+https://github.com/illuin-tech/colpali.git
 fastapi
